Add sub module artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,11 @@ build:jdk17:
   artifacts:
     paths:
       - "target/"
+      - "client/target/"
+      - "coordinator/target/"
+      - "dead-drop/target/"
+      - "lib/target/"
+      - "mix/target/"
     expire_in: "30 days"
 
 containers:jdk17:
@@ -39,7 +44,7 @@ containers:jdk17:
   dependencies:
     - build:jdk17
   script:
-    - 'bash .ci/build-containers.sh'
+    - 'sh .ci/build-containers.sh'
 
 release:jdk17:
   stage: deploy
