--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,6 @@ FROM eclipse-temurin:17-jre-alpine
 RUN mkdir /opt/app
 WORKDIR /opt/app
 
-COPY ./target/mix-client-*.jar mix-client.jar
+COPY ./target/latte-mixxiato.client-*.jar client.jar
 
-ENTRYPOINT ["java", "-jar", "./mix-client.jar"]
+ENTRYPOINT ["java", "-jar", "./client.jar"]
