--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -3,7 +3,7 @@ FROM eclipse-temurin:17-jre-alpine
 RUN mkdir /opt/app
 WORKDIR /opt/app
 
-COPY ./target/mix-coordinator-*.jar mix-coordinator.jar
+COPY ./target/latte-mixxiato.coordinator-*.jar coordinator.jar
 
 EXPOSE 8888
-ENTRYPOINT ["java", "-jar", "./mix-coordinator.jar"]
+ENTRYPOINT ["java", "-jar", "./coordinator.jar"]
