--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ containers:jdk17:
   dependencies:
     - build:jdk17
   script:
-    - 'sh .ci/build-containers.sh'
+    - 'bash .ci/build-containers.sh'
 
 release:jdk17:
   stage: deploy
