--- a/dead-drop/Dockerfile
+++ b/dead-drop/Dockerfile
@@ -3,7 +3,7 @@ FROM eclipse-temurin:17-jre-alpine
 RUN mkdir /opt/app
 WORKDIR /opt/app
 
-COPY ./target/mix-dead-drop-*.jar mix-dead-drop.jar
+COPY ./target/latte-mixxiato.dead-drop-*.jar dead-drop.jar
 
 EXPOSE 8888
-ENTRYPOINT ["java", "-jar", "./mix-dead-drop.jar", "8888"]
+ENTRYPOINT ["java", "-jar", "./dead-drop.jar", "8888"]
