--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>dead-drop</module>
         <module>coordinator</module>
         <module>gateway</module>
+        <module>relay</module>
     </modules>
 
     <build>
