--- a/dead-drop/Dockerfile
+++ b/dead-drop/Dockerfile
@@ -6,4 +6,4 @@ WORKDIR /opt/app
 COPY ./target/latte-mixxiato.dead-drop-*.jar dead-drop.jar
 
 EXPOSE 8888
-ENTRYPOINT ["java", "-jar", "./dead-drop.jar", "8888"]
+ENTRYPOINT ["java", "-jar", "./dead-drop.jar"]
