--- a/test-net/docker-compose.yaml
+++ b/test-net/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: registry.mixlab.mondcarion.group/latte-mixxiato-coordinator:latest
     networks:
     - mixnet
-  mixa:
+  gateway:
     image: registry.mixlab.mondcarion.group/latte-mixxiato-mix:latest
     ports:
     - "8888:8888"
@@ -15,8 +15,8 @@ services:
     - ./coord.json:/opt/app/coord.json
     depends_on:
     - coordinator
-    command: "mixa"
-  mixb:
+    command: "gateway 8888"
+  relay:
     image: registry.mixlab.mondcarion.group/latte-mixxiato-mix:latest
     networks:
     - mixnet
@@ -24,16 +24,7 @@ services:
     - ./coord.json:/opt/app/coord.json
     depends_on:
     - coordinator
-    command: "mixb"
-  mixc:
-    image: registry.mixlab.mondcarion.group/latte-mixxiato-mix:latest
-    networks:
-    - mixnet
-    volumes:
-    - ./coord.json:/opt/app/coord.json
-    depends_on:
-    - coordinator
-    command: "mixc"
+    command: "relay 8888"
   dead-drop:
     image: registry.mixlab.mondcarion.group/latte-mixxiato-dead-drop:latest
     networks:
@@ -42,6 +33,7 @@ services:
     - ./coord.json:/opt/app/coord.json
     depends_on:
     - coordinator
+    command: "dead-drop 8888"
   client:
     image: registry.mixlab.mondcarion.group/latte-mixxiato-client:latest
     networks:
@@ -51,9 +43,9 @@ services:
     command: "dead-drop 8888 hello this is obi wan"
     depends_on:
     - coordinator
-    - mixa
-    - mixb
-    - mixc
+    - gateway
+    - relay
+    - dead-drop
 
 networks:
   mixnet:
