--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -24,7 +24,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>edu.kit.tm.ps.latte_mixxiato.mix.Main</mainClass>
+                            <mainClass>edu.kit.tm.ps.latte_mixxiato.gateway.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
