--- a/test-net/docker-compose.yaml
+++ b/test-net/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
     - mixnet
     volumes:
     - ./coord.json:/opt/app/coord.json
-    command: "dead-drop 8003 hello this is obi wan"
+    command: "hello this is obi wan"
     depends_on:
     - coordinator
     - gateway
